--- a/website/templates/list.html
+++ b/website/templates/list.html
@@ -17,6 +17,10 @@
 					</div>
 				</a>
 			</div>
+		{% else %}
+			<div class="col-md-12">
+				<p><em>There doesn't seem to be anything here...</em></p>
+			</div>
 		{% endfor %}
 	</div>
 {% endblock %}
