updated to use thumbnail/full size images

--- a/website/templates/day.html
+++ b/website/templates/day.html
@@ -14,8 +14,8 @@
 				<div class="row">
 			{% endif %}
 			<div class="col-sm-3">
-				<a href="/static/img/{{ pic }}" class="thumbnail">
-					<img src="/static/img/{{ pic }}" alt="" />
+				<a href="/static/img/full/{{ pic }}" class="thumbnail">
+					<img src="/static/img/thumbnails/{{ pic }}" alt="" />
 					<div class="caption">
 						<h4 class="text-center">{{ times[pic] }}</h4>
 					</div>
