--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Puppycam</title>
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 </head>
 <body>
